tests/samples/if-condition-is-not-other.err
if-condition-is-not-other.flow:6:Syntax error. "ar is not *other:\n   ".
