tests/samples/if-condition-is-not-other.flow
define intent foo

define entity bar

flow onboarding given #foo do
  if $foo.bar is not other:
    say 'nothing'
done
